@@ -1,22 +1,22 @@
-ec80c028a167c8caeb7af58c0eda15df *DESCRIPTION
+1c8614befbe81d9444bd1a492806b30a *DESCRIPTION
 dad41e78c1e71a758d15f6c52ea59f26 *NAMESPACE
 a4674dc6130e48bb9932cfd196089224 *R/chmethod.R
 404454972786974e2f1f280f046fd709 *R/kaczmarz.R
-065407d9d39dfb2df3532bb8db4a4711 *R/lfe.R
+de6bb59e08b341d2f3a2d54c2531b37e *R/lfe.R
 9c5bb0dcc59bd02bd6fea406462904ee *R/utils.R
 34101ed5b91d2dc3affe2492cc54fd62 *config.guess
 588158fcdcf4b03387aeb9a210e9eb0b *config.sub
-b2cc51786bd95de41f0ac81f84d365aa *configure
+beef8fdb4ccfdc40978bbacd70fdce65 *configure
 d41d8cd98f00b204e9800998ecf8427e *configure.win
 2069bc6747ddfaed21c7eac2085f486d *exec/lfescript
 cde9cfb9b5a5687b63effdf0db6c2b60 *inst/CITATION
 046c064a0ee31218120e934f6d3aa6ff *inst/TODO
-92c7b62c363c7b0906afcc25110a28b9 *inst/doc/CHANGELOG
+58279bf63df2f30ed1aca56fd298591f *inst/doc/CHANGELOG
 c3775db734384702adbeec82c3685f28 *inst/doc/gen2.R
 d73aa42e460d4b153ce34ffe1b194674 *inst/doc/lfeguide.txt
 2b3fce7671f957dcaf0bec1fb808ecf5 *inst/doc/lfehow.Rnw
-25ac6c6643dbbd561ab56c0032b286ff *inst/doc/lfehow.pdf
-ecc976ea71ecf36a1c25f9bfe71b24d4 *inst/doc/presentation.pdf
+67bada4b733dfdd2c19aa2fa7d4c254b *inst/doc/lfehow.pdf
+62a7c795d90b00fe5aa33170591fe236 *inst/doc/presentation.pdf
 d0676ee9e2f5a1ebba4b1af1bafaaa9e *inst/doc/test2.lfe
 2be23ece05d57e5c9112afee8bd5cae8 *man/btrap.Rd
 8ece68ac17caeae08d3313290f45548b *man/compfactor.Rd
@@ -28,9 +28,9 @@ ea1041d1fbc79c254c0c3ea317371867 *man/demeanlist.Rd
 4a26f45620a67c2158637150eea745e1 *man/kaczmarz.Rd
 57cd678ec5fabedcde4ddd4b1df1f854 *man/lfe-package.Rd
 0476eb941488a6a23113692e802ffa0d *shtool
-65df92d9f05d6c84a66d89df1dc3d284 *src/Makevars
-0abdec0d0d8c89eef374de71eae88e01 *src/Makevars.in
-44b9ccf3cb44734bd8b3a24b67f06c5b *src/lfe.c
+2e666249f7ddabc7abdfaa82d7454f6a *src/Makevars
+69e7c9dd078c2fcc6d21a1625a7d9d3e *src/Makevars.in
+63eb4aa0cec83b71465ee2f935705730 *src/lfe.c
 6a91b3ef040e0fbd5a8c98f3c16ba6c5 *tests/comparelm.R
 f844bfc9c3369114cf06724b17bf8d6d *tests/comparelm.Rout.save
 31dfb137f837a0a5dc21d2c9fcdeb52a *tests/degenerate.R
