@@ -1,3 +1,3 @@
 PKG_LIBS=-pthread 
-PKG_CFLAGS=$(C_VISIBILITY) -pthread
+PKG_CFLAGS=$(C_VISIBILITY) -pthread -DHAVE_SEM_TW
 OBJECTS=lfe.o
